--- a/public/stylesheets/rails_admin/create.css
+++ b/public/stylesheets/rails_admin/create.css
@@ -107,6 +107,14 @@
   width:150px;
 }
 
+.field .date, .field .datetime {
+  background: url("/images/rails_admin/calendar.png") no-repeat right;
+}
+
+.field .time, .field .timestamp {
+  background: url("/images/rails_admin/clock.png") no-repeat right;
+}
+
 .field .integer {
   width:90px;
 }
