--- a/app/views/rails_admin/main/_integer.html.erb
+++ b/app/views/rails_admin/main/_integer.html.erb
@@ -1,2 +1,2 @@
               <%= label_tag "#{field.abstract_model.to_param}_#{field.name}", field.label %>
-              <%= text_field field.abstract_model.to_param, field.name, :maxlength => field.length, :class => "#{field.css_class} #{field.has_errors? ? "errorField" : nil}", :value => field.value %>
+              <%= text_field field.abstract_model.to_param, field.name, :maxlength => field.length, :class => "#{field.css_class} #{field.has_errors? ? "errorField" : nil}", :value => field.value, :style => "width:#{field.column_width}px" %>
