--- a/app/views/rails_admin/main/_password.html.erb
+++ b/app/views/rails_admin/main/_password.html.erb
@@ -1,2 +1,2 @@
 <%= label_tag "#{field.abstract_model.to_param}_#{field.name}", field.label %>
-<%= password_field field.abstract_model.to_param, field.name, :size => [50, field.length].min, :maxlength => field.length, :class => "#{field.css_class} #{field.has_errors? ? "errorField" : nil}" %>
+<%= password_field field.abstract_model.to_param, field.name, :size => [50, field.length].min, :maxlength => field.length, :class => "#{field.css_class} #{field.has_errors? ? "errorField" : nil}", :style => "width:#{field.column_width}px" %>
