--- a/app/views/rails_admin/main/_text.html.erb
+++ b/app/views/rails_admin/main/_text.html.erb
@@ -1,6 +1,5 @@
               <%= label_tag "#{field.abstract_model.to_param}_#{field.name}", field.label %>
-              <%= text_area field.abstract_model.to_param, field.name, :cols => 80, :class => "#{field.css_class}
-               #{field.has_errors? ? "errorField" : nil}", :value => field.value %>
+              <%= text_area field.abstract_model.to_param, field.name, :cols => 80, :class => "#{field.css_class} #{field.has_errors? ? "errorField" : nil}", :value => field.value, :style => "width:#{field.column_width}px" %>
               <% if field.ckeditor %>
                 <script language="javascript">
                   Event.observe(window, 'load', function() {
