--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -89,21 +89,16 @@
           </table>
           <div id="tableFooter">
             <%= submit_tag t("admin.list.delete_selected"), :id => "bulkdelete_btn" %>
+            <div id="pagination">
+              <% if @page_count.to_i > 1 %>
+                <%= paginate(@current_page, @page_count, :url => params).html_safe %>
+              <% end %>
+              <%= @record_count %>
+              <%= @model_config.abstract_model.model.model_name.human(:count => @record_count, :default => @record_count != 1 ? @model_config.list.label.downcase.pluralize : @model_config.list.label.downcase) %>
+              <% if @page_count.to_i == 2 %>
+                <%= link_to(t("admin.list.show_all"), params.merge(:all => true), :remote => true, :class => "showall") %>
+              <% end %>
+            </div>
           </div>
         <% end %>
       </div>
-    </div>
-    <% unless @xhr %>
-    <div id="pagination">
-      <p class="paginator">
-      <% if @page_count.to_i > 1 %>
-        <%= paginate(@current_page, @page_count, :url => params).html_safe %>
-      <% end %>
-      <%= @record_count %>
-      <%= @model_config.abstract_model.model.model_name.human(:count => @record_count, :default => @record_count != 1 ? @model_config.list.label.downcase.pluralize : @model_config.list.label.downcase) %>
-      <% if @page_count.to_i == 2 %>
-        <%= link_to(t("admin.list.show_all"), params.merge(:all => true), :class => "showall") %>
-      <% end %>
-      </p>
-    </div>
-    <% end %>
