Implement timeline month changing event and simplify parts of AbstractHistory interface which have most likely been designed to conform to old timeline client.

--- a/app/views/rails_admin/main/history.html.erb
+++ b/app/views/rails_admin/main/history.html.erb
@@ -1,1 +1,1 @@
-<%= render(:partial => 'rails_admin/main/history', :locals => {:month => @current_month.month, :year => @current_month.year, :history => @history}) -%>
+<%= render(:partial => 'rails_admin/main/history', :locals => {:month => @month, :year => @year, :history => @history}) -%>
