--- a/app/views/rails_admin/main/_text.html.erb
+++ b/app/views/rails_admin/main/_text.html.erb
@@ -1,12 +1,12 @@
               <%= label_tag "#{field.abstract_model.to_param}_#{field.name}", field.label %>
               <%= text_area field.abstract_model.to_param, field.name, :cols => 80, :class => "#{field.css_class} #{field.has_errors? ? "errorField" : nil}", :value => field.value, :style => "width:#{field.column_width}px" %>
               <% if field.ckeditor %>
-                <script language="javascript">
-                  Event.observe(window, 'load', function() {
+                <%= javascript_tag do %>
+                  $j(document).ready(function($){
                     CKEDITOR.replace( '<%= "#{field.abstract_model.to_param}_#{field.name}" %>',
                         {
                           customConfig : '<%= field.ckeditor_config_js %>'
                         });
                   });
-                </script>
+                <% end %>
               <% end %>
