--- a/app/views/rails_admin/main/index.html.erb
+++ b/app/views/rails_admin/main/index.html.erb
@@ -44,28 +44,28 @@
             <div id="listingHistory">
 <%= render(:partial => 'history', :locals => {:month => Time.now.month, :year => Time.now.year, :history => @history}) -%>
             </div>
-            <script type="text/javascript">
-            $j(document).ready(function($){
-              var cache = {};
-               $("#timeline").timeline({
-                 url: "/admin/history/slider",
-                 monthChanged: function(month, year) {
-                   if (cache[year] && cache[year][month]) {
-                     $("#listingHistory").html(cache[year][month]);
-                   } else {
-                     $j("#listingHistory").load(
-                       "/admin/history/list",
-                       { month: month, year: year },
-                       function(response, status, xhr) {
-                         if (!cache[year]) { cache[year] = {}; }
-                         cache[year][month] = response;
-                       }
-                     );
-                   }
-                 },
-                 monthNames: <%= ActiveSupport::JSON.encode(month_names).html_safe %>
-               });
-            });
-            </script>
+            <%= javascript_tag do %>
+              $j(document).ready(function($){
+                var cache = {};
+                 $("#timeline").timeline({
+                   url: "/admin/history/slider",
+                   monthChanged: function(month, year) {
+                     if (cache[year] && cache[year][month]) {
+                       $("#listingHistory").html(cache[year][month]);
+                     } else {
+                       $j("#listingHistory").load(
+                         "/admin/history/list",
+                         { month: month, year: year },
+                         function(response, status, xhr) {
+                           if (!cache[year]) { cache[year] = {}; }
+                           cache[year][month] = response;
+                         }
+                       );
+                     }
+                   },
+                   monthNames: <%= ActiveSupport::JSON.encode(month_names).html_safe %>
+                 });
+              });
+            <% end %>
           </div>
         </div>
