--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -1,5 +1,5 @@
 <%
-  params = request.params.except(:action, :controller, :model_name)
+  params = request.params.except(:action, :controller, :model_name, :utf8)
   query = params[:query]
   filter = params[:filter]
   sort = params[:sort]
@@ -38,12 +38,12 @@
 <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
       <div id="contentMainModules">
         <div class="searchBox">
-          <form action="" method="get">
+          <%= form_tag(params.reject{|key, value| key.to_sym == :page}, :method => "get", :remote => true) do %>
             <fieldset>
               <input type="text" id="searchBar" name="query" value="<%= query %>"/>
-              <input type="submit" id="searchbar_btn" value="<%= t("admin.list.search_btn")%>" />
+              <input type="submit" id="searchbar_btn" value="<%= t("admin.list.search_btn") %>" />
             </fieldset>
-          </form>
+          <% end %>
         </div>
         <%= form_tag rails_admin_bulk_delete_path(:model_name => @abstract_model.to_param), :method => :get do %>
           <table class="grid">
@@ -74,12 +74,12 @@
               <% @objects.each_with_index do |object, index| %>
               <tr class="<%= index % 2 == 0 ? " odd" : " even" %>">
                 <% other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1) %>
-                <td class="other left"><%= link_to("...", other_left) %></td>
+                <td class="other left"><%= link_to("...", other_left, remote: true) %></td>
                 <% properties.map{|property| property.bind(:object, object)}.each do |property| %>
                   <td class="<%= "#{property.css_class}" %>"><%= [:text, :string].include?(property.type) ? property.formatted_value[0..40] : property.formatted_value %></td>
                 <% end %>
                 <% other_right = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i + 1) %>
-                <td class="other right"><%= link_to("...", other_right)%></td>
+                <td class="other right"><%= link_to("...", other_right, remote: true)%></td>
                 <td class="action edit"><%= link_to(t("admin.list.edit_action"), rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) %></td>
                 <td class="action delete"><%= link_to(t("admin.list.delete_action"), rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id)) %></td>
                 <td class="action select"><%= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_destroy_#{object.id}" %></td>
