Rewrite the prototype multiselect widget to a jQuery one and refactor has many and HABTM associations to share the same partial

--- a/app/views/layouts/rails_admin/dashboard.html.erb
+++ b/app/views/layouts/rails_admin/dashboard.html.erb
@@ -12,7 +12,7 @@
 
   <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" %>
   <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js" %>
-  <%= javascript_include_tag "rails_admin/jquery.no-conflict.js","rails_admin/rails.js","rails_admin/ra.timeline.js" %>
+  <%= javascript_include_tag "rails_admin/application.js", "rails_admin/rails.js", "rails_admin/ra.timeline.js" %>
 </head>
 <body>
   <div id="wrapper">
