--- a/app/views/layouts/rails_admin/list.html.erb
+++ b/app/views/layouts/rails_admin/list.html.erb
@@ -8,7 +8,7 @@
   <%= stylesheet_link_tag('rails_admin/list') %>
 
   <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" %>
-  <%= javascript_include_tag "rails_admin/jquery.no-conflict.js","rails_admin/rails.js" %>
+  <%= javascript_include_tag "rails_admin/application.js", "rails_admin/rails.js" %>
 
   <%= javascript_tag do %>
     $j(document).ready(function($){
