--- a/app/views/rails_admin/main/_belongs_to_association.html.erb
+++ b/app/views/rails_admin/main/_belongs_to_association.html.erb
@@ -17,6 +17,6 @@
 
 <%= javascript_tag do %>
   $j(document).ready(function($){
-    $(".createAssociatedRecord").remoteform({ dialogClass: "createAssociatedRecordDialog" });
+    $(".createAssociatedRecord").remoteForm({ dialogClass: "createAssociatedRecordDialog" });
   });
 <% end %>
