--- a/app/views/rails_admin/main/_field.html.erb
+++ b/app/views/rails_admin/main/_field.html.erb
@@ -1,6 +1,7 @@
-              <div class="field">
-<%= field.render %>
-                <% if @object.errors.on(field.name) %>
-                <span class="errorMessage"><%= "#{field.label } #{@object.errors.on(field.name)}" %></span>
-                <p class="help"><%= field.help %></p>
-              </div>
+  <div class="field">
+    <%= field.render %>
+    <% if @object.errors.on(field.name) %>
+        <span class="errorMessage"><%= "#{field.label } #{@object.errors.on(field.name)}" %></span>
+    <% end %>
+    <p class="help"><%= field.help %></p>
+  </div>
