--- a/app/views/rails_admin/main/_field.html.erb
+++ b/app/views/rails_admin/main/_field.html.erb
@@ -1,7 +1,7 @@
   <div class="field">
     <%= field.render %>
-    <% if @object.errors.on(field.name) %>
-        <span class="errorMessage"><%= "#{field.label } #{@object.errors.on(field.name)}" %></span>
+    <% if @object.errors[field.name].size > 0 %>
+        <span class="errorMessage"><%= "#{field.label } #{@object.errors[field.name]}" %></span>
     <% end %>
     <p class="help"><%= field.help %></p>
   </div>
